# helper

./: .cursorrules  .env.development  .env.local.sample  .env.test  .env.test.local.sample  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  Procfile.dev  README.md  SECURITY.md  TRADEMARK_GUIDELINES.md  eslint.config.mjs  figma.config.json  heroicon-to-lucide-mapping.md  instrumentation-client.ts  instrumentation.ts  knip.json  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  replGlobals.mts  sentry.edge.config.ts  tailwind.config.ts  tsconfig.json  turbo.json  vercel.json  vitest.config.mts  webpack.sdk.cjs  xtrpc.config.json
.github/: copilot-instructions.md
app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/tauri/src-tauri/: Cargo.toml  Entitlements.appstore.plist.template  Entitlements.dmg.plist  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json  desktop.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: apple_sign_in.rs  lib.rs  main.rs  tab_manager.rs  utils.rs
components/: assignSelect.tsx  carousel.tsx  confirmationDialog.tsx  constants.ts  deepLinkRedirect.tsx  fileUploadContext.tsx  fonts.ts  generateKnowledgeBankDialog.tsx  humanizedTime.tsx  jsonView.tsx  loadingSpinner.tsx  messageMarkdown.tsx  navigationRail.tsx  onModEnterKeyboardEvent.ts  pageContainer.tsx  pageContent.tsx  pageHeader.tsx  panel.tsx  popover.tsx  savingIndicator.tsx  (+14 more)
(+1724 files in other folders)
