[package]
name = "Helper"
version = "0.1.0"
description = "Helper"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-log = "2"
log = "0.4"
tao = "0.31.1"
lazy_static = "1.4.0"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
objc2-authentication-services = "0.3"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSError", "NSArray"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
